# OOP_training

./: .gitignore  README.md  classes.py  main.py  pyproject.toml  pytest.ini  testick.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_classes_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_utils_py.html
src/: classes.py  main.py  utils.py
tests/: conftest.py  test_classes.py  test_utils.py
